Updates to fcls, list building scripts, plotting macro to produce sims with correct thresholds

--- a/.gitignore
+++ b/.gitignore
@@ -2,4 +2,6 @@
 *\#
 *.png
 *.log
-SubmissionLists/Fcl_files/*
+SubmissionScripts/Fcl_files/*
+SubmissionScripts/Logs/*
+SubmissionScripts/SubmissionLists/*
